--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <main id="main">
         <h1 id="title">Dr. Norman Borlaug</h1>
-        <div id="img-div">
+        <figure id="img-div">
             <img id="image" src="path/to/your/image.jpg" alt="Dr. Norman Borlaug">
-            <p id="img-caption">Description of the image goes here.</p>
-        </div>
+            <figcaption id="img-caption">Description of the image goes here.</figcaption>
+        </figure>
         <p id="tribute-info">Textual content describing Dr. Norman Borlaug goes here.</p>
         <a id="tribute-link" href="https://example.com" target="_blank">More about Dr. Norman Borlaug</a>
     </main>
 </body>
 </html>
+
